--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 
-.container{
-  align-items: center;
-  align-content: center;
-  align-self: center;
+.app-container{
+  
+  
+  
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   width: 300px;
   height: 600px;
   background-color: aquamarine;
+  border: 5px solid black;
+  border-radius: 20px;
 }
+
+ 
